Fix header__footer alignment

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -58,9 +58,9 @@
   font-size: 16px;
   line-height: 20px;
   color: #838383;
-  align-items: center;
 }
 
 .header__paragraph {
   margin: 0;
+  margin-top: auto;
 }
